fix: decrease padding bottom to correct height
The space is a bit too much on the bottom, especially on mobile.

--- a/src/routes/style.css
+++ b/src/routes/style.css
@@ -30,7 +30,7 @@ h1 {
 a {
 	color: inherit;
 	text-decoration: none;
-	padding-bottom: 5px;
+	padding-bottom: 0.1rem;
 	border-bottom: 2px dotted lightgray;
 }
 
